force-app/main/default/objects/Juan__c/Juan__c.object-meta.xml
<CustomObject>
    <label>Juan</label>
    <nameField>
        <label>Juan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Juanes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>