force-app/main/default/objects/Juan__c/fields/Favourite__c.field-meta.xml
<CustomField>
    <fullName>Favourite__c</fullName>
    <label>Favorite Dessert</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Chocholate</fullName>
            </value>
            <value>
                <fullName>Ice Cream</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>