force-app/main/default/objects/Juan__c/fields/Juan_Layout_2__c.field-meta.xml
<CustomField>
    <fullName>Juan_Layout_2__c</fullName>
    <formula>&apos;Layout 2&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Layout 2</label>
    <type>Text</type>
</CustomField>