force-app/main/default/objects/Juan__c/fields/Layout_Master__c.field-meta.xml
<CustomField>
    <fullName>Layout_Master__c</fullName>
    <formula>&apos;Layout Master&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Layout Master</label>
    <type>Text</type>
</CustomField>