force-app/main/default/objects/Juan__c/fields/Lightning_Record_Page_2__c.field-meta.xml
<CustomField>
    <fullName>Lightning_Record_Page_2__c</fullName>
    <formula>&apos;Lightning Record Page 2&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lightning Record Page 2</label>
    <type>Text</type>
</CustomField>