force-app/main/default/objects/Juan__c/fields/Page_Layout_1__c.field-meta.xml
<CustomField>
    <fullName>Page_Layout_1__c</fullName>
    <formula>&apos;Layout 1&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Layout 1</label>
    <type>Text</type>
</CustomField>