force-app/main/default/objects/Juan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phase 1</fullName>
            </value>
            <value>
                <fullName>Phase 2</fullName>
            </value>
            <value>
                <fullName>Phase 3</fullName>
            </value>
            <value>
                <fullName>Phase 4</fullName>
            </value>
            <value>
                <fullName>Phase 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>