force-app/main/default/objects/Juan__c/recordTypes/RecordType_1.recordType-meta.xml
<RecordType>
    <fullName>RecordType_1</fullName>
    <active>true</active>
    <label>RecordType_1</label>
</RecordType>